# prototype-anti-tempering

./: .env  README.md  config.py  docker-compose.yml  main.py  model.py
Models/: Company.py  pyproject.toml
exporter/: Dockerfile  MetricsCollector.py  MetricsHandler.py  main.py  pyproject.toml
models/: LoginWebPage.py
monitoring/prometheus/: prometheus.yml
scraper/: Dockerfile  main.py  pyproject.toml  requirements.txt
scraper/models/: pyproject.toml
scraper/models/models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
