[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exporter"
version = "0.1.0"
description = "Custom exporter for metrics"
requires-python = ">=3.8"
dependencies = [
    "sqlmodel",
    "psycopg2-binary",
    "prometheus-client",
]

[tool.setuptools]
py-modules = ["main", "MetricsHandler"]
